[package]
name = "taskui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
crossterm = "0.27.0"
directories = "5.0.1"
lazy_static = "1.5.0"
ratatui = "0.25.0"
serde = "1.0.195"
serde_yaml = "0.9.30"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
